--- a/html/index.html
+++ b/html/index.html
@@ -8,15 +8,29 @@
 </head>
 <body>
       
+
+  
   <div class="CardInte">
     <div class="tudo">
         <h1 id="texto1card">Bem Vindo</h1>
         <h2 id="texto2card">Insira seu login</h2>
-        <input class="login" type="text" name="Login" id="inp-Login" placeholder="Insira seu login">
-        <input class="login" type="password" name="Senha" id="inp-Senha" placeholder="Insira sua senha">
+        <div id="move-inp">
+        <form>
+          <div class="single-input">
+              <input type="text" class="input" id="inp-Senha" required>
+              <label for="nome">Insira seu Login</label>
+          </div>
+          <div class="single-input">
+              <input type="password" class="input" id="inp-Login" required>
+              <label for="sobrenome">Insira sua Senha</label>
+          </div>
+      </form>
+    </div>
+
+
+
        <a href="../html/tela2.html"><button class="login" id="btn-Acessar">Acessar</button></a> 
     </div>
 </div>
-
 </body>
 </html>
